--- a/web/styles.css
+++ b/web/styles.css
@@ -1,7 +1,10 @@
+@import 'http://fonts.googleapis.com/css?family=Bree+Serif';
+
 body {
     width: 100%;
     height: 100%;
     margin: 0;
+    overflow: hidden;
 }
 
 canvas {
